--- a/public/stylesheets/stylish-portfolio.css
+++ b/public/stylesheets/stylish-portfolio.css
@@ -85,7 +85,7 @@ hr.small {
     position: relative;
     top: 0;
     width: 250px;
-    margin: 0;
+    margin-top: 20px;
     padding: 0;
     list-style: none;
 }
